--- a/check.html
+++ b/check.html
@@ -8,6 +8,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
 					<ul>
 						<li><a href="index.html">Mеню</a></li>
 						<li><a href="pizza.html">Піца</a></li>
-						<li><a href="about.html">Напої</a></li>
+						<li><a href="drinks.html">Напої</a></li>
 						<li><a href="check.html">Контакти</a></li>
 					</ul>
 				</div>
@@ -47,10 +48,10 @@
 
 		<div id="map_desc">
 			<p><strong>Приходьте до нас в офіс:</strong></p><br>
-			<p>st. Alexandra Mishugi, 11B</p>
+			<p>Kyiv, st. Knyaziv Ostroz`kyh, 17</p>
 		</div>
 
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.498014865688!2d30.63441711594253!3d50.39455569927151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c44c35e19d69%3A0xdf021b0d67acfffe!2zMTFCLCDRg9C7LiDQkNC70LXQutGB0LDQvdC00YDQsCDQnNC40YjRg9Cz0LgsIDEx0JEsINCa0LjQtdCyLCAwMjAwMA!5e0!3m2!1sru!2sua!4v1618494581677!5m2!1sru!2sua" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1426.1417579378287!2d30.54414994639713!3d50.4392966974656!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c91ed8aefe87%3A0xa190ae0faaa16019!2sil%20Molino!5e0!3m2!1sru!2sua!4v1719151978193!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 		<footer>
 			<p>© All Right Reserved. My company Inc.</p>
